# faunus

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .lgtm.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  LICENSE  Makefile  Makefile.nocmake  README  README.md  compile-faunus.sh  conanfile.py  conanfile.txt  example.json  example.sh  example.yml  faunus  group.h  lgtm.yml  minimal.sh  minimal.yml  mkdocs.yml  physconst.cpp  pyvenv.cfg  slump.h  vcpkg.json  water.sh  water.yml
classes/: CMakeLists.txt  Doxyfile  FindGMX.cmake  Makefile  README  analysis.C  analysis.h  average.h  chain.h  container.C  container.h  countdown.h  ensemble.h  ewald.C  ewald.h  geometry.h  group.C  group.h  hardsphere.C  hardsphere.h  histogram.h  inputfile.C  inputfile.h  io-example.C  io.C  io.h  iobabel.C  iobabel.h  legendre.h  lennardjones.h  mainpage.doxygen  markovmove.C  markovmove.h  matubayashi.h  mcloop.h  montecarlo.C  particles.C  particles.h  physconst.C  physconst.h  (+32 more)
classes/doc/: mainpage.doxygen
classes/examples/: average-test.C  clutch-example-small.aam  clutch-example.C  clutch-example.aam  histogram-test.C  interaction-example.C  interaction-test.C  markovmove-example.C  protein-example.C  simpson-example.C  widom-example.C  xytable-test.C
classes/obselete/: montecarlo.h  space.C
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  footer.html  mainpage.dox  mainpage.doxygen  programs.doxygen  python.doxygen  python.md
doc/examples/: minimalmc.cpp
doc/homepage/: developer.html  download.html  help.html  index.html  programs.html
docs/: CMakeLists.txt  Gemfile  README.md  _config.yml  conf.py  energy.md  index.md  index.rst  mkdocs.yml  pandoc.tex  requirements.txt  schema.yml
docs/_data/: navigation.yml
docs/_docs/: analysis.md  docs.md  energy.md  gallery.md  header.md  hej.md  index.md  install.md  langevin.md  moves.md  running.md  topology.md
docs/_pages/: analysis.md  developer.md  energy.md  gallery.md  index.md  input.md  moves.md  out.html  start.md  topology.md
examples/: CG-amino-acid-model.json  CMakeLists.txt  README  README.md  bulk.sh  bulk.yml  cluster.agr  cluster.out.json  cluster.state.json  cluster.yml  doublelayer.state.json  doublelayer.yml  fasta-titration.yml  isochoric.xyz  isochoric.yml  lipid.xyz  membrane.out.json  membrane.state  membrane.state.json  membrane.yml  minimal.out.json  minimal.sh  minimal.state.json  minimal.yml  nacl.out.json  nacl.yml  naclewald1.yml  naclewald2.yml  naclfanourgakis.yml  penalty.ipynb  penalty.yml  phosphate.out.json  phosphate.state.json  phosphate.yml  phosphate_na.yml  plot-pair-potentials.ipynb  polymers.out.json  polymers.state.json  polymers.yml  primitive_model.ipynb  (+22 more)
examples/anglescan/: anglescan.ipynb  anglescan.xyz  anglescan.yml
examples/bend/: bend.out.json  bend.yml  mc_vs_md.agr
examples/binding/: binding.C
examples/bulk/: bulk.out.json  bulk.state.json  bulk.yml
examples/bulk-replay/: bulk-replay.yml
examples/calciumhydroxide/: calciumhydroxide.out.json  calciumhydroxide.state.json  calciumhydroxide.yml
examples/calciumhydroxide_molecular/: calciumhydroxide_molecular.out.json  calciumhydroxide_molecular.state.json  calciumhydroxide_molecular.yml
examples/chain/: chain.cmp.json  chain.out.json  chain.state.json  chain.xyz  chain.yml
examples/chargemove/: chargemove.ipynb  chargemove.out.json  chargemove.yml
examples/cluster/: cluster-ideal.out.json  cluster.ipynb  cluster.out.json  cluster.yml
examples/cluster-ideal/: cluster-ideal.yml
examples/dihedral/: compare.py  dihedral-plot.py  dihedral.out.json  dihedral.yml  dihedral_plot.py  out.json  state.json
examples/doublelayer/: doublelayer.agr  doublelayer.out.json  doublelayer.yml
examples/ewald/: ewald.C
examples/fasta/: fasta.yml
examples/fene_stretch/: feneStretch-plot.py  feneStretch.out.json  fene_stretch.out.json  fene_stretch.yml  fene_stretch_plot.py
examples/gibbs-ensemble/: gibbs-ensemble.ipynb  gibbs-ensemble.yml
examples/gibbs-volume/: gibbs-volume.ipynb  gibbs-volume.yml
examples/gouychapman/: gouychapman.out.json  gouychapman.state.json  gouychapman.yml
examples/gromosBend/: gromosBend-plot.py
examples/gromos_bend/: gromos_bend.out.json  gromos_bend.yml  gromos_bend_plot.py
examples/improper-dihedral/: improper-dihedral-plot.py  improper-dihedral.out.json
examples/improper_dihedral/: improper_dihedral.out.json  improper_dihedral.yml  improper_dihedral_plot.py
examples/isobaric/: isobaric.C  isobaric.conf  lysozyme250mM.ph4.5.aam  run.sh
examples/langevin/: compare.py  langevin_lj.out.json  langevin_lj.yml  montecarlo_lj.out.json  montecarlo_lj.yml  start.json
examples/manybody/: confout.gro  confout.xyz  isobaric.conf  manybody.C  manybody.conf  mrh4a.aam  neu.aam  run.sh  twobody.C  twobody.conf
examples/manyproteins/: README.md  input.json  input.yml  run.sh  structure.pqr
examples/membrane/: membrane.out.json  membrane.state.json  (+1 more)
scripts/: CMakeLists.txt  Dockerfile  FindEigen3.cmake  OptimizationFlags.cmake  _build.sh  apply-format  build.sh  csvcompare.py  environment.yml  extractsids.py  extracttips.py  faunus-manual  indent.sh  inject_schema.py  jsoncompare.py  meta.yaml  music.yml  ob2aam.py  psc2vmd.py  pyfaunus-test.ipynb  pyfaunus-test.py  pyfaunus.cpp  table.py  test_schema_examples.py  titrate.sh  vmd-dipole.tcl  vmd-qrtraj.tcl  vmd-qtraj.tcl  vmd-sasa.tcl  xyz2debye.sh  yason.py
src/: CMakeLists.txt  _histogram.cpp  actions.cpp  actions.h  analysis.cpp  analysis.h  atomdata.cpp  atomdata.h  atomdata_test.h  auxiliary.cpp  auxiliary.h  auxiliary_test.h  average.cpp  average.h  benchmarks.cpp  bonded.cpp  bonds.cpp  bonds.h  bonds_test.h  celllist.h  celllistimpl.cpp  celllistimpl.h  chainmove.cpp  chainmove.h  clustermove.cpp  clustermove.h  container.cpp  core.cpp  core.h  core_test.h  drift.cpp  electrolyte.h  energy.cpp  energy.h  energy_test.h  ensemble.cpp  ewald.h  ewald3D.cpp  example.cpp  exprtk.cpp  (+102 more)
swig/: CMakeLists.txt  interface.i
(+1129 files in other folders)
